2018 actor text updates
2018 actor text updates

--- a/src/views/actors/affiliates/Charles-Keating.hbs
+++ b/src/views/actors/affiliates/Charles-Keating.hbs
@@ -2,7 +2,7 @@
 name: actors
 ---
 
-<h2>Charles Keating</h2>
+<h2>Charles Keating, III</h2>
 
 <div class="right-column">
     <h2>Exhibits</h2>
@@ -12,140 +12,20 @@ name: actors
     </div>
 
 <img src="/img/actors/Keating.jpg" alt="Charles Keating" class="float-left">
-<p>Charles Keating III (Owner of ACC and Lincoln S&amp;L)</p>
 
+<p>Charles Keating, III</p>
+<p><u>Owner of ACC and Lincoln S&L</u></p>
 
+<p>Charles Keating grew up in Cincinnati, Ohio. He attended the University of Cincinnati as an undergraduate and, after serving in the Navy, for law school. He became a founding partner of Keating, Muething & Keating in Cincinnati. In 1960, Keating and his client, Carl Lindner, created American Financial Corporation (AFC), a holding company for Lindner’s disparate businesses. Several stockholder lawsuits were filed against AFC and the Securities and Exchange Commission launched a major investigation of the company, charging Linder and Keating of having defrauded investors and filing false SEC reports. Keating resigned from AFC in 1976 and moved to Phoenix, Arizona to run a real estate firm, American Continental Homes (ACH).</p>
 
-<p>
-Charles Keating grew up in Cincinnati, OH, where he attended the
-University of Cincinnati for his undergraduate work and, after serving 
-in the Navy, law school. Beginning his career as a lawyer in the late 
-1950s, he established himself as an anti-pornography crusader, 
-founding decency organizations and serving as a dissenting member 
-on the President’s Commission on Obscenity and Pornography.
-After exploring the law and working at a corporate law firm, 
-Keating also experimented with other businesses: He sold life 
-insurance, ran a fruit stand, and worked for Roto-Rooter. In 1960, 
-Keating and his client, Carl Lindner, created American Financial 
-Corporation (AFC), a holding company for Lindner’s disparate 
-businesses that created further subsidiaries, 
-which all did business with each other. While on the board of directors 
-at AFC, Keating developed a reputation for aggressiveness and 
-arrogance. By 1975 and 1976, several stockholder lawsuits were filed 
-against AFC, and Keating was under fire. The Securities and Exchange 
-Commission launched a major investigation of the company and 
-charged Linder and Keating of having defrauded investors
-and filing false SEC reports. Keating resigned from AFC in 1976 
-and moved to Phoenix, Arizona to run a real estate firm, American 
-Continental Homes (ACH). </p><p>
-Keating turned ACH (now-renamed American 
-Continental Corporation, ACC) around. By the early 1980s the once failing 
-company’s profits were in the millions. It had become the biggest 
-single-family homebuilder in Phoenix and Denver. In 1984, ACC bought 
-Lincoln Savings and Loan, an Irvine, California thrift. Keating practically
-eliminated traditional home lending, taking full advantage of 
-California’s liberalized investment powers<sup>2</sup>
- and established a high-risk 
-operation characterized by explosive growth and investments
-concentrated in speculative activities. At the time, Keating was the highest 
-paid executive of all public companies in Arizona. Five other ACC 
-employees were also in the top ten – including <a href="/actors/affiliates/Jack-Atchison">Jack Atchison</a>,
-When the government took over 
-Lincoln, it was 65th in assets among the almost 3,000 savings and loan 
-institutions in the United States and was first in development and 
-construction loans.</p><p>
-Keating was very politically active, as well. Besides being an outspoken 
-anti-pornography activist, he also made large contributions to various 
-politicians and focused a great deal of his energy on lobbying for 
-legislation that would benefit him and his company. When newly 
-appointed Bank Board Chairman Ed Gray started proposing regulations 
-that disrupted Lincoln’s practices, Keating attempted to hire him out of his position. When this didn’t work, some believed that Keating leaked 
-multiple <a href="/evidence" title="" target="">incriminating stories</a> about Gray to the press in an effort to 
-“drive him out of his job.”  In 1987, Keating also sent ACC lawyer and Keating’s chief legal counsel, James Grogan, a <a href="/files/exhibits/Lincoln/%234%20_Get%20Black_%20Memo%2007-15-87.jpeg">memo</a> to “Get Black” – the San Francisco regulator closest to Gray, who took copious notes at the April 9th Keating Five meeting.</p><p>
-It was Grogan who did a significant amount of Keating’s political lobbying. During the hearings,
-Grogan claims that Riegle was the chief organizer of the 
-Keating Five meetings. He says Riegle was the first one to tell him that Gray would 
-meet with the senators. Grogan also claims that Riegle repeatedly 
-asked him to convince DeConcini and McCain to attend the meeting 
-with Gray and to get McCain to send a letter inviting Riegle to the 
-meeting. Grogan also sent the <a href="/files/exhibits/Lincoln/%233%20Arthur%20Young%20Letter%2003-17-87.pdf">“Arthur Young” letter</a>, which was 
-written by Jack Atchison and that concluded that Federal regulators 
-were “harassing” Lincoln by being “unduly harsh.”</p><p>
-After the April 2nd meeting, Keating received word that the 
-senators were extremely frustrated with the lack of information Gray 
-had provided. Keating sent Grogan to D.C. to “keep the team 
-together.” Grogan met with each of the senators to reiterate how 
-important their presence at the second meeting was to Keating. 
-Keating also sent DeConcini a “schedule” of the topics he wanted the 
-senators to discuss with the regulators. There is evidence that this schedule circulated among the senators and some of their staff. After 
-the April 9th meeting, Senator Glenn told Grogan that he didn’t think 
-the Bank Board was going to be able to help them. Both Grogan and 
-Keating entirely terminated their inquiries into the regulation, which 
-caused some to think that Grogan and Keating were given a tip about 
-the criminal referral.</p><p>
-On July 11th, 1988, Federal regulators began another 
-examination of Lincoln. This exam lasted over four months; exit 
-conferences occurred just before Thanksgiving. Keating's financial 
-problems were becoming increasingly more public. In September, when
-Keating’s opulent Phoenician Hotel opened, the Phoenix Gazette noted 
-that “the taxpayers are taking the risk” and the hotel is “likely to push 
-Lincoln into bankruptcy.” In October, Forbes ran a story about the risky 
-subordinated debentures – unsecured loan certificates that were 
-backed by general credit rather than specific assets – offered by 
-Keating in California. This $300 million public offering, “subordinated” 
-to $113 million in ACC debt, became completely worthless six months 
-later when ACC filed for bankruptcy. His written instructions to the 
-salesmen were “the weak, the meek and the ignorant are our natural 
-targets.” Most purchasers thought the debentures were, like other 
-Lincoln accounts, Federally insured.</p><p>
-The FHLB-SF Examination Report was delivered on December 12th, 1988. It
-contained substantial justification for a detailed Cease and Desist 
-Order. The Bank Board staff advised the regulators that 
-proceeding might violate the Agreement negotiated with Keating, since
-Lincoln had not had a chance to respond. Eight days later, when the 
-Supervisory Letter and Examination Report was sent to Lincoln, ACC 
-agreed to sell Lincoln to an investor group called the Lincoln 
-Acquisition Corporation (LAC). Senators DeConcini and Cranston 
-reasoned that a sale was better than bankruptcy. They called various 
-regulators either to urge approval or to check on the status of the sale.
-Both called Gray’s successor, M. Danny Wall, who testified that they 
-“urged prompt consideration.” The proposed sale fell through because 
-the Bank Board concluded it was a “sham” sale – Keating was trying to 
-“transfer” control to himself.</p><p>
-Federal examiners who were on site at Lincoln in early March, 
-1989 found an immediate cash flow problem. That same day, ACC 
-proposed a second sale: ACC would sell Lincoln to an investor group 
-(imaginatively) called Lincoln Acquisition Savings Corporation (LASC). 
-After studying the proposal, the staff recommended that the Bank 
-Board reject the application because “there was no real economic 
-benefit to Lincoln.” Senators DeConcini and Cranston again reached 
-out to various regulators. Cranston met personally with Wall, the 
-Chairman of the Bank Board. The second sale fell through because it 
-was not deemed an “arms’ length” transaction. </p><p>
-Days later, LASC filed an amended application, which provided for the removal of all current Lincoln and ACC insiders from the Board of 
-Directors. Cranston called Bank Board member Martin at his unlisted 
-home number at 10pm. Martin says he didn't give out the number, and
-has never been called at home by a Senator – other than DeConcini 
-who called very early the next morning, seemingly using “the same 
-script,” according to Martin. DeConcini also called John Goeghegan, a 
-California regulator and allegedly sought assurances that the regulator 
-would keep quiet one of his underling's objections to the sale.</p><p>
-ACC filed for bankruptcy on April 13th, 1989, after the third sale 
-fell through. It was almost exactly two years since the San Francisco 
-regulators had recommended conservatorship. The Resolution Trust 
-Corporation seized Lincoln on April 14th. The estimated cost to 
-taxpayers: $2 billion.</p><p>
-On September 15th, the Resolution Trust Corporation filed the 
-biggest bank fraud lawsuit ever – a $1.1 billion racketeering [RICO] suit
-against Keating. Later that month, Keating was booked at Los Angeles County Jail, charged with 42 counts of fraud. His bond was set at $5 million. During Keating’s trial, the prosecution produced a parade of elderly investors who lost their life’s savings by investing in ACC junk bonds. In California, nearly 23,000 mostly elderly residents lost $300 million.
-</p>
-<p>
-Keating was convicted in both Federal and state courts of many counts of fraud, racketeering, and conspiracy. He served four-and-a-half years in prison before both convictions were overturned in 1996 because flawed jury instructions in both cases violated Keating’s due-process rights. In 1999, he <a href="/files/exhibits/Keating/Keating%20Pleads%20Guilty%20to%20Fraud_%20Legal%20Saga%20Ends%20-%20Los%20Angeles%20Times.pdf">pled</a> guilty to a more limited set of wire and bankruptcy fraud counts, and was sentenced to the time he had already served.
-</p>
-<p>
-<sup>1</sup>
- While the FHLBB had an oversight role over all of the nation’s S&Ls, 
-most of their regulations applied only to Federally chartered ones. 
-Thrifts that were state-chartered (as Lincoln was in California) had to 
-abide by the laws of their state.</p>
+<p>Keating turned ACH (now-renamed American Continental Corporation, <a href="/actors/affiliates/ACC">ACC</a>) around. By the early 1980s, the once failing company had become the biggest single-family homebuilder in Phoenix and Denver. In 1984, ACC bought <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln Savings and Loan</a>, an Irvine, California thrift. Keating practically eliminated traditional home lending, taking full advantage of California’s liberalized investment powers<a href="#section1"><sup>1</sup></a> and established a high-risk operation characterized by explosive growth and investments concentrated in speculative activities. At the time, Keating was the highest paid executive of all public companies in Arizona. Five other ACC employees were also in the top ten – including <a href="/actors/affiliates/Jack-Atchison">Jack Atchison</a>. When the FHLBB eventually took over Lincoln, it was 65th in assets among the almost 3,000 savings and loan institutions in the United States and first in development and construction loans.</p>
+
+<p>Keating was politically active. Besides being an outspoken anti-pornography activist, he also made large contributions to many politicians and focused a great deal of his energy on lobbying for legislation that would benefit his company. When newly appointed Bank Board chairman <a href="/actors/supporting_cast/Ed-Gray">Ed Gray</a> started proposing regulations that disrupted Lincoln’s practices, Keating attempted to hire him out of his position. When this didn’t work, some believed that Keating leaked multiple <a href="/evidence">incriminating stories</a> about Gray to the press in an effort to “drive him out of his job.” In 1987, Keating sent ACC lawyer and Keating’s chief legal counsel, <a href="/actors/affiliates/James-Grogan">James Grogan</a>, a <a href="/files/exhibits/Lincoln/%234 _Get Black_ Memo 07-15-87.jpeg">memo</a> to “Get Black” – the San Francisco regulator closest to Gray, who took copious notes (the "<a href="/files/exhibits/Gray/Black Transcript 04-10-87.pdf">Black Transcript</a>" at the April 9th meeting.</p>
+
+<p>On September 15th, 1989 – after the government takeover of Lincoln earlier that year – the Resolution Trust Corporation filed the biggest bank fraud lawsuit ever – a $1.1 billion racketeering suit against Keating. Later that month, Keating was booked at Los Angeles County Jail, charged with 42 counts of fraud. His bond was set at $5 million. During Keating’s trial, the prosecution produced a parade of elderly investors who lost their life’s savings by investing in ACC junk bonds. In California, nearly 23,000 mostly elderly residents lost almost $300 million.</p>
+
+<p>Keating was convicted in both Federal and state courts of fraud, racketeering, and conspiracy. He served four-and-a-half years in prison before both convictions were overturned in 1996 because flawed of jury instructions that violated Keating’s due-process rights. In 1999, he <a href="/files/exhibits/Keating/Keating Pleads Guilty to Fraud_ Legal Saga Ends - Los Angeles Times.pdf">pled</a> guilty to a more limited set of wire and bankruptcy fraud counts, and was sentenced to the time he had already served. Keating has always maintained his innocence.</p>
+
+<p><p id="section1"><sup>1</sup></p>While the FHLBB had an oversight role over all of the nation’s S&Ls, most of their regulations applied only to Federally-chartered ones. Thrifts that were state-chartered (as Lincoln was in California) had to abide by the laws of their state.</p>
+
 <br clear="all">
