--- a/src/views/actors/aides/Carolyn-Jordan.hbs
+++ b/src/views/actors/aides/Carolyn-Jordan.hbs
@@ -10,8 +10,8 @@ name: actors
                 <li><a href="/files/evidence/27">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 1</a></li>
                 <li><a href="/files/evidence/28">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 2</a></li>
             </ul>
-        
-        
+
+
         <h2>Video</h2>
     <ul>
                 <li><a href="/videos/Jordan - Part I">Jordan - Part I</a></li>
@@ -20,10 +20,10 @@ name: actors
     </div>
 
 
-<p>Senator Cranston’s Chief Banking Aide.</p>
-<p>Jordan joined Cranston’s banking staff in 1972. As early as 
-December of 1984, she met with James Grogan (Lincoln S&L’s general 
-counsel) to discuss concerns with proposed “direct investment” laws. 
-Jordan says she had no knowledge of Cranston’s 1987 contact with 
+<p><u>Senator Cranston’s Chief Banking Aide</u></p>
+<p>Jordan joined Cranston’s banking staff in 1972. As early as
+December of 1984, she met with James Grogan (Lincoln S&L’s general
+counsel) to discuss concerns with proposed “direct investment” laws.
+Jordan says she had no knowledge of Cranston’s 1987 contact with
 Keating until long after the April meetings.</p>
 <br clear="all">
