--- a/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
+++ b/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
@@ -10,7 +10,7 @@ name: actors
                 <li><a href="/files/transcripts/Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1.pdf">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1</a></li>
                 <li><a href="/files/transcripts/Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 2.pdf">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 2</a></li>
             </ul>
-        
+
         <h2>Video</h2>
     <ul>
                 <!--<li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">VanPaasschen - Part I</a> (Good Government students only)</li>-->
@@ -19,12 +19,12 @@ name: actors
     </div>
 
 
-<p>Senator McCain's Banking Aide.&nbsp;</p>
-<p>There is evidence that VanPaasschen warned McCain to “stay 
-away from Keating.” Not only did his “high flying demeanor” put her 
-off, but she also voiced discomfort with the way the meetings were set 
-up. She was especially concerned with the request that McCain “not 
-bring any aides to the [April] meeting[s]." Disregarding the request, 
-McCain brought VanPaasschen; she was stationed outside the room 
+<p><u>Senator McCain's Banking Aide</u>&nbsp;</p>
+<p>There is evidence that VanPaasschen warned McCain to “stay
+away from Keating.” Not only did his “high flying demeanor” put her
+off, but she also voiced discomfort with the way the meetings were set
+up. She was especially concerned with the request that McCain “not
+bring any aides to the [April] meeting[s]." Disregarding the request,
+McCain brought VanPaasschen; she was stationed outside the room
 where the meetings took place.</p>
 <br clear="all">
