--- a/src/views/actors/aides/Joy-Jacobson.hbs
+++ b/src/views/actors/aides/Joy-Jacobson.hbs
@@ -11,7 +11,7 @@ name: actors
                 <li><a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%202.pdf">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 2</a></li>
                 <li><a href="/files/evidence/38">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 3</a></li>
             </ul>
-        
+
         <h2>Video</h2>
     <ul>
                 <li><a href="/videos/Jacobson - Part I">Jacobson - Part I</a></li>
@@ -21,10 +21,10 @@ name: actors
     </div>
 
 <img src="/img/actors/Joy-Jacobson.jpg" alt="Joy Jacobson" class="float-left">
-<p>Senator Cranston’s Chief Fundraiser</p>
-<p>In 1984, Jacobson began working for Cranston as a Senate staff 
-member. In 1987, she shifted roles and became his “Fundraising 
-Coordinator.” Jacobson was present at a number of the meetings 
+<p><u>Senator Cranston’s Chief Fundraiser</u></p>
+<p>In 1984, Jacobson began working for Cranston as a Senate staff
+member. In 1987, she shifted roles and became his “Fundraising
+Coordinator.” Jacobson was present at a number of the meetings
 attended by Cranston, Grogan, and Keating.</p>
 
 
