--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -7,12 +7,12 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="/files/evidence/41">Testimony - Senator McCain's Account of meeting with DeConcini</a></li>
+                <li><a href="/files/evidence/41">Testimony - Senator McCain's Account of Meeting with DeConcini</a></li>
                 <li><a href="/files/evidence/42">Testimony - Senator McCain, Part 1</a></li>
                 <li><a href="/files/evidence/43">Testimony - Senator McCain, Part 2</a></li>
             </ul>
-        
-     
+
+
     <h2>Exhibits</h2>
     <ul>
       <li><a href="/files/exhibits/McCain/%231 McCain to Gray 05-25-89.pdf">Exhibit #1 McCain to Gray 05-25-89</a></li>
@@ -26,9 +26,9 @@ name: actors
       <li><a href="/files/exhibits/McCain/%239 Memo, to McCain from VanPaasschen, Banking Aide 04-02-87.pdf">Exhibit #9: Memo, to McCain from VanPaasschen, Banking Aide</a></li>
       <li><a href="/files/evidence/19">Exhibit #10: Memo, VanPaasschen to McCain, "Talking Points for Meeting with Ed Gray"</a></li>
       <li><a href="/files/exhibits/McCain/%2311 Memo, VanPaasschen to McCain, Overview of AAC Involvement 04-14-89.pdf">Exhibit #11: Memo, VanPaasschen to McCain, Overview of AAC Involvement</a></li>
-                
+
     </ul>
-            
+
     <h2>Videos</h2>
     <ul>
       <li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">McCain - All Parts</a> (Good Government students only)</li>
@@ -36,75 +36,24 @@ name: actors
     </div>
 
 <img src="/img/actors/John-McCain.jpg" alt="Sen. John McCain" class="float-left">
-<p>Senator McCain (R-AZ)<br></p>
-<p>A native of Northern Virginia, Senator John McCain III moved to Arizona in 1981 after retiring as a naval captain. 
-Elected to the U.S. House of Representatives in 1983, he served for two terms and was then elected to the U.S. Senate 
-in 1986 (easily winning four subsequent re-elections). As representative, he was assigned first to the House Committee 
-on Interior Affairs and then to the House Foreign Affairs Committee.&nbsp;<br></p><p>McCain, who was the only 
-Republican in the Keating Five, had the closest personal relationship to <a href="/actors/affiliates/Charles-Keating" 
-title="" target="">Charles Keating</a> before the events of April 1987. Keating was a political friend and supporter 
-from 1981 to 1987. Keating and his associates contributed to McCain's congressional campaigns in 1982, 1984, and 1986, 
-contributions that totaled $112,600. McCain's family even spent vacations in the Bahamas, staying free at the Keating's 
-home and using <a href="/actors/affiliates/ACC" title="" target="">ACC</a>'s corporate jet. Apart from this, ACC was 
-the largest homebuilder in the state of Arizona which directly impacted many of McCains constituents. During the 
-hearings, McCain stated, "I don't think being in political office precludes me from having friends. I don't think it 
-precludes friends of mine from contributing to my campaign."<br></p><p>McCain's primary aide for banking issues, <a 
-href="/actors/aides/Gwendolyn-VanPaasschen" title="" target="">Gwendolyn VanPaasschen</a>, says that, in early March 
-1987, she began receiving complaints from the Arizona League of Savings and Loans Association about the Bank Board's 
-capital forbearance policies. These policies set minimum capital requirements for S&amp;Ls (banks given capital 
-forbearance had to file a plan to restore their capital base within a specified period before issuing any more loans). 
-Around the same time, <a href="/actors/senators/Don-Riegle" title="" target="">Senator Riegle</a> approached McCain on 
-the Senate floor to talk about the by then fairly public issues between Keating and <a 
-href="/actors/supporting_cast/Ed-Gray" title="" target="">Ed Gray</a>, the Bank Board Chairman. Afterwards, the two 
-went to Riegle's office to briefly discuss the issue. McCain testified that nothing came of the meeting.</p><p>On March 
-19th, McCain's office <a href="/files/exhibits/Lincoln/%233%20Arthur%20Young%20Letter%2003-17-87.pdf">received</a> the Arthur Young letter
-with the business card of one of Keating's staff attached. During the hearing, VanPaasschen testified it was 
-"perplexing to her that they would receive a letter from Arthur Young to Senator Riegle regarding on of their 
-constituents." The same day, McCain and VanPaasschen met with <a href="/actors/senators/Dennis-DeConcini" title="" 
-target="">Senator DeConcini</a> and his banking aid, <a href="/actors/aides/Laurie-Sedlmayr" title="" target="">Laurie 
-Sedlmayr</a>, to discuss further Keating's complaints. DeConcini testified that, during that meeting, he suggested that 
-the four of them immediately go to Ed Gray's office to inquire further. McCain remained non-committal about a future 
-meeting with Gray and stated that going to Gray's or the regulators' office would be "improper." VanPaasschen worried 
-about the aggressive nature of DeConcini's suggestions, knowledge of newspaper articles tying Keating's support to 
-McCain, and Gray's reputation as someone who may later misrepresent the nature of their meeting. This worry prompted 
-her to strongly urge McCain to withdraw any future involvement with Keating's issues. McCain asked VanPaasschen to look 
-into the matter further, particularly the veracity of the Arthur Young letter. At some point during this period (the 
-exact date is unclear), <a href="/actors/affiliates/Lincoln-Savings-and-Loan" title="" target="">Lincoln's</a> VP, <a 
-href="/actors/affiliates/James-Grogan" title="" target="">James Grogan</a>, met with Senator McCain and asked him to 
-invite Senator Riegle, as an expert in banking and regulatory issues, to the meeting with Gray. McCain reacted strongly 
-to this request and refused to invite Riegle. He did, however, agree to talk to Riegle about the 
-issue.&nbsp;<br></p><p>On March 23, 1987, in a phone call with VanPaasschen, Laurie Sedlmayr let slip that Keating 
-called McCain a "wimp" during a meeting with DeConcini. The next day, after hearing this information, McCain met with 
-Keating in his office. According to McCain, "That conversation ended the relationship and friendship between McCain and 
-Keating." &nbsp;<br></p><p>So, if he had cut off his relationship with Keating, what motivated McCain to attend the 
-April 2nd meeting? McCain says that, shortly after his meeting with Keating, he received a memo from VanPaasschen that 
-stated that she had called Jack Atchison (author of Arthur Young letter), and that he had strongly endorsed the claims 
-he had made in his letter (VanPaasschen can't remember if McCain had this information on the 22nd or the 23rd). On 
-March 27th, McCain alerted VanPaachen that there was going to be a meeting with Ed Gray, and that he planned to attend 
-(according to VanPaasschen, McCain also informed her that the other four senators would also attend the meeting. McCain 
-says he wasn't aware until April 1st that other senators would be in attendance). McCain asked VanPaasschen to prepare 
-a memo with background information for the meeting. Although VanPaasschen strongly advised against any kind of meeting, 
-"He [McCain] said that he was going because, in spite of his rift with Charlie Keating, there were still 2,000 people 
-under the employment of ACC in Arizona."&nbsp;<br></p><p>On April 1st, VanPaasschen went to Laurie Sedlmayr's office to 
-discuss the content of the April 2nd meeting. Sedlmayr showed VanPaasschen her "Notes for Meeting," which outlined both 
-the lawsuits ACC had filed against the FHLBB and Ed Gray and a punch list of "What ACC Would Like" and "What ACC Will 
-Do." VanPaasschen negotiated a "deal" with Sedlmayr that these topics would not be used in the next day's meeting with 
-Gray (on the grounds of impropriety). There is evidence that she wrote the words "WONT USE" (<a 
-href="/files/evidence/19" title="" target="">Exhibit 10</a>) on the top of her copy. DeConcini denies that there was 
-any such agreement.<br></p><p>On April 2nd, with a memo (<a href="/files/evidence/13" title="" target="">Exhibit 
-9</a>) from VanPaasschen outlining talking points that would be "fair game" in hand, McCain attended a meeting in 
-DeConcini's office with Ed Gray, Senator Cranston, Senator Glenn and Senator DeConcini; the meeting dealt with the 
-issues between Lincoln S&amp;L and the Bank Board. McCain claims that he received instruction not to bring any aids; he 
-brought VanPaasschen anyway and stationed her outside of the meeting in case he had any substantive questions. Gray 
-says that McCain asked on multiple occasions if their line of inquiry was improper and stated that he didn't want to 
-take any improper actions. Taking Ed Gray up on his offer, McCain then attended a second meeting with the San Francisco 
-regulators a week later. Riegle joined the group after receiving a written <a href="/files/evidence/18" 
-title="" target="">invitation</a> from DeConcini and McCain (McCain says that he knew nothing of the invite, and that 
-his name was written but not signed on the letter). At the April 9th meeting, McCain asked questions exclusively 
-regarding to appraisal issues. He recieved information regarding the criminal referral after which he made no further 
-inquiry and terminated all contact with both Keating and the Regulators.</p><p>When the meetings began receiving press 
-in mid-1989, McCain sent a letter to Ed Gray (<a href="/files/exhibits/McCain/%231%20McCain%20to%20Gray%2005-25-89.pdf" title="" target="">exhibit #1</a>) asking 
-for Gray's impression (<a href="/files/exhibits/McCain/%232%20Gray's%20Response%20to%20(1)%2005-30-89.pdf" title="" target="">Exhibit #2</a>)
-of the April meetings. McCain also returned all contributions he had received from Keating and reimbursed him for his family's 
-vacations.&nbsp;</p><p><br></p>
+<p><u>U.S. Senator (R-AZ)</u><br></p>
+
+<p>A native of Northern Virginia, Senator John McCain III moved to Arizona in 1981, retiring as a naval captain after serving in Vietnam and being captured as a POW. Elected to the U.S. House of Representatives in 1983, he served for two terms and was then elected to the U.S. Senate in 1986, easily winning five subsequent re-elections. As a Congressman, he was assigned first to the House Committee on Interior Affairs and then to the House Foreign Affairs Committee.</p>
+
+<p>McCain, who was the only Republican in the Keating Five, had the closest personal relationship to <a href="/actors/affiliates/Charles-Keating">Charles Keating</a> before the events of April 1987. Keating was a political friend and supporter from 1981 to 1987. Keating and his associates contributed to McCain's congressional campaigns in 1982, 1984, and 1986, contributions that totaled $112,600. McCain's family even spent vacations in the Bahamas, staying free at the Keating's home and using <a href="/actors/affiliates/ACC">ACC's</a> corporate jet. Apart from this, ACC was the largest homebuilder in Arizona, which directly impacted many of McCain’s constituents. During the hearings, McCain stated, "I don't think being in political office precludes me from having friends. I don't think it precludes friends of mine from contributing to my campaign."</p>
+
+<p>McCain's primary aide for banking issues, <a href="/actors/aides/Gwendolyn-VanPaasschen">Gwendolyn VanPaasschen</a>, says that, in early March 1987, she began receiving complaints from the Arizona League of Savings and Loans Association about the Bank Board's capital forbearance policies. These policies set minimum capital requirements for S&Ls (banks running afoul of the capital forbearance rules had to file a plan to restore their capital base within a specified period before issuing any more loans). Around the same time, <a href="/actors/senators/Don-Riegle">Senator Riegle</a> approached McCain on the Senate floor to talk about the by then fairly public issues between Keating and <a href="/actors/supporting_cast/Ed-Gray">Ed Gray</a>, the Bank Board chairman. Afterwards, the two went to Riegle's office to briefly discuss the issue. McCain testified that nothing came of the meeting.</p>
+
+<p>On March 19th, McCain's office <a href="/files/exhibits/Lincoln/%233 Arthur Young Letter 03-17-87.pdf">received</a> the Arthur Young letter with the business card of one of Keating's staff attached. During the hearing, VanPaasschen testified it was "perplexing to her that they would receive a letter from Arthur Young to Riegle regarding one of their constituents." The same day, McCain and VanPaasschen met with <a href="/actors/senators/Dennis-DeConcini">Senator DeConcini</a> and his banking aide, <a href="/actors/aides/Laurie-Sedlmayr">Laurie Sedlmayr</a>, to discuss Keating's complaints. DeConcini testified that, during that meeting, he suggested that the four of them immediately go to Ed Gray's office to inquire further. McCain remained non-committal about a future meeting with Gray and stated that going to Gray's or the regulators' office would be "improper." VanPaasschen advised against any kind of a meeting. McCain asked VanPaasschen to look into the matter further, particularly the veracity of the Arthur Young letter. At some point during this period (the exact date is unclear), <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln's</a> VP, <a href="/actors/affiliates/James-Grogan">James Grogan</a>, met with McCain and asked him to invite Riegle, as an expert in banking and regulatory issues, to the meeting with Gray. McCain reacted negatively to this request and refused to invite Riegle. He did, however, agree to talk to Riegle about the issue.</p>
+
+<p>On March 23, 1987, in a phone call with VanPaasschen, Laurie Sedlmayr shared that Keating called McCain a "wimp" during a meeting with DeConcini. The next day, after hearing this information, McCain met with Keating in his office. According to McCain, "That conversation ended the relationship and friendship between McCain and Keating."</p>
+
+<p>McCain says that, shortly after his meeting with Keating, he received a memo from VanPaasschen that stated she had called <a href="/actors/affiliates/Jack-Atchison">Jack Atchison</a> (author of Arthur Young letter), and that he had strongly endorsed the claims he made in the letter (VanPaasschen can't remember if McCain had this information on the 22nd or the 23rd). On March 27th, McCain alerted VanPaasschen that there was going to be a meeting with Ed Gray, and that he planned to attend. (According to VanPaasschen, McCain also informed her that the other four senators would also attend the meeting. McCain says he wasn't aware until April 1st that other senators would be in attendance). McCain asked VanPaasschen to prepare a memo with background information for the meeting. Although VanPaasschen strongly advised against any kind of meeting, "He [McCain] said that he was going because, in spite of his rift with Charlie Keating, there were still 2,000 people under the employment of ACC in Arizona."</p>
+
+<p>On April 1st, VanPaasschen went to Laurie Sedlmayr's office to discuss the content of the April 2nd meeting. Sedlmayr showed VanPaasschen her "Notes for Meeting," which outlined both the lawsuits ACC had filed against the FHLBB and Ed Gray and a punch list of "What ACC Would Like" and "What ACC Will Do." VanPaasschen negotiated a "deal" with Sedlmayr that these topics would not be used in the next day's meeting with Gray (on the grounds of impropriety). There is evidence that she wrote the words "WONT USE" (Exhibit <a href="/files/evidence/19">10</a>) on the top of her copy. DeConcini denies that there was any such agreement.</p>
+
+<p>On April 2nd, with a memo (Exhibit <a href="/files/evidence/13">9</a>) from VanPaasschen outlining talking points that would be "fair game" in hand, McCain attended a meeting in DeConcini's office with Gray, DeConcini, and Senators <a href="/actors/senators/Alan-Cranston">Cranston</a> and <a href="/actors/senators/John-Glenn">Glenn</a>; the meeting dealt with the issues between <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln S&L</a> and the Bank Board. McCain claims that he received instruction not to bring any aides; he brought VanPaasschen anyway and stationed her outside of the meeting in case he had any substantive questions. Gray says that McCain asked on multiple occasions if their line of inquiry was improper and stated that he didn't want to take any improper actions. Taking Gray up on his offer, McCain then attended a second meeting with the <a href="/actors/supporting_cast/SF-Regulators">San Francisco</a> regulators a week later. Riegle joined the group after receiving a written <a href="/files/evidence/18">invitation</a> from DeConcini and McCain (McCain says that he knew nothing of the invite, and that his name was written but not signed on the letter). At the April 9th meeting, McCain asked questions exclusively regarding appraisal issues. He received information regarding the criminal referral, after which he made no further inquiry and terminated all contact with both Keating and the SF regulators.</p>
+
+<p>When the meetings began receiving press in mid-1989, McCain sent a letter to Gray (Exhibit <a href="/files/exhibits/McCain/%231 McCain to Gray 05-25-89.pdf">1</a>) asking for his impression (Exhibit <a href="/files/exhibits/McCain/%232 Gray's Response to (1) 05-30-89.pdf">2</a>) of the April meetings. McCain also returned all contributions he had received from Keating and reimbursed him for his family's vacations.</p>
+
 <br clear="all">
