--- a/src/views/actors/supporting_cast/SF-Regulators.hbs
+++ b/src/views/actors/supporting_cast/SF-Regulators.hbs
@@ -5,7 +5,7 @@ name: actors
 <h2> SF Regulators</h2>
 
 <div class="right-column">
-        
+
         <h2>Video</h2>
     <ul>
                 <li><a href="/videos/70-Minutes">70 Minutes: A First Look into the Hearings</a></li>
@@ -14,20 +14,24 @@ name: actors
 
 
 <p>
-William "Bill" Black – FSLIC general counsel<br />
-James Cirona – FHLB-SF President and Principal Supervisory Agent<br />
-Michael Patriarca – FHLB-SF Director of Agency Functions<br />
-Richard Sanchez – FHLB-SF Supervisory Agent for Lincoln S&L of Irvine,
-CA<br /></p><p>
-These regulators were summoned to Washington D.C. to discuss the 
-FHLB-SF extended examination of Lincoln S&L. The four men were 
-present at the April 9th meeting and contend that Lincoln was 
-exaggerating the value of properties in which it had invested or on 
+<u>William "Bill" Black</u> – <u>FSLIC General Counsel</u><br />
+<u>James Cirona</u> – <u>FHLB-SF President and Principal Supervisory Agent</u><br />
+<u>Michael Patriarca</u> – <u>FHLB-SF Director of Agency Functions</u><br />
+<u>Richard Sanchez</u> – <u>FHLB-SF Supervisory Agent for Lincoln S&L of Irvine,
+CA</u><br /></p><p>
+
+These regulators were summoned to Washington D.C. to discuss the
+FHLB-SF extended examination of Lincoln S&L. The four men were
+present at the April 9th meeting and contend that Lincoln was
+exaggerating the value of properties in which it had invested or on
 which it had made loans.</p><p>
-Black’s boss, FHLBB Chairman Ed Gray, asked Black to report back to 
-him about the April 9th meeting. Black took the extensive notes that 
-formed the basis for the infamous “Black memorandum.” While many 
-questioned exactly how Mr. Black was able to take such detailed notes,
-the substance of these notes was not significantly challenged by any of
-the witnesses to the Senate Ethics Committee.</p>
+
+Black’s boss, FHLBB Chairman Ed Gray, asked Black to report back to
+him about the April 9th meeting. Black took the extensive notes that
+formed the basis for the infamous <a href="
+http://keatingfive.org/files/exhibits/Gray/Black%20Transcript%2004-10-87.pdf">
+“Black Transcript</a>.” While many questioned exactly how Mr. Black was able to
+take such detailed notes, the substance of these notes was not significantly
+challenged by any of the witnesses to the Senate Ethics Committee.</p>
+
 <br clear="all">
