--- a/src/views/actors/affiliates/ACC.hbs
+++ b/src/views/actors/affiliates/ACC.hbs
@@ -2,29 +2,34 @@
 name: actors
 ---
 
-<h2> ACC</h2>
+<h2>ACC</h2>
 
 <img src="/img/actors/american_continental_corp.png" alt="ACC" class="float-left">
-<p>
-American Continental Corporation (ACC) was an Ohio-chartered, 
-Phoenix, Arizona-based real estate company that was active in the 
-1970s and 1980s. It was created in 1978 as a spin-off of American 
-Financial Group, and was intended to build residential homes. Its 
-chairman was Charles Keating, who moved to Phoenix to run it. By 
-1981, Keating had two thousand employees on his payroll, was one of 
+
+<p>American Continental Corporation (ACC) was an Ohio-chartered,
+Phoenix, Arizona-based real estate company that was active in the
+1970s and 1980s. It was created in 1978 as a spin-off of American
+Financial Group, and was intended to build residential homes. Its
+chairman was Charles Keating, who moved to Phoenix to run it. By
+1981, Keating had two thousand employees on his payroll, was one of
 the largest land developers in Arizona, benefiting from a boom in home
 building in Arizona.</p>
-<p>In February 1984, American Continental Corporation acquired the 
-underperforming Lincoln Savings and Loan Association for $51 million. 
-Much of American Continental's assets were in the form of Arizona real 
-estate, junk bonds, and mortgage-backed securities. Lincoln S&L 
-expanded into aggressive, risky land development deals and financial 
-arrangements, including loans to ACC itself. For most of 1987, 
-American Continental was profitable, but by 1988, losses mounted due 
-to financial troubles and other negative events at Lincoln. By 1989, 
-Lincoln made up 90 percent of American Continental’s assets. 
-On April 13th, 1989, American Continental Corporation filed for 
-Chapter 11 bankruptcy. Lincoln’s loss of many investors’ life savings 
-became one of the key events of the 1980s savings and loan crisis and 
+
+<p>In February 1984, American Continental Corporation acquired the
+underperforming Lincoln Savings and Loan Association for $51 million.
+Much of American Continental's assets were in the form of Arizona real
+estate, junk bonds, and mortgage-backed securities. Lincoln S&L
+expanded into aggressive, risky land development deals and financial
+arrangements, including loans to ACC itself. For most of 1987,
+American Continental was profitable, but by 1988, losses mounted due
+to financial troubles and other negative events at Lincoln. By 1989,
+Lincoln made up 90 percent of American Continental’s assets.
+On April 13th, 1989, American Continental Corporation filed for
+Chapter 11 bankruptcy. Lincoln’s loss of many investors’ life savings
+became one of the key events of the 1980s savings and loan crisis and
 the core of the Keating Five political scandal.</p>
+
+<p>See <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln S&L</a>
+for more details of the 1987-1989 period for ACC.</p>
+
 <br clear="all">
