--- a/src/views/actors/affiliates/Jack-Atchison.hbs
+++ b/src/views/actors/affiliates/Jack-Atchison.hbs
@@ -11,19 +11,24 @@ name: actors
             </ul>
     </div>
 
-    
-<p>Arthur Young accountant and Lincoln employee</p>
 
-<p>
-Jack Atchison was a manager at Arthur Young, one of the “big 
-four” U.S. accounting firms. While working at Arthur Young, he 
-conducted a number of ACC’s external audits during the 1980s and 
-penned the famous Arthur Young letter,” which outlined the reasons for
-his belief that the San Francisco regulators abused Lincoln S&L, an 
+<p><u>Arthur Young accountant and Lincoln employee</u></p>
+
+<p>Jack Atchison was the managing partner of the Phoenix office at Arthur Young,
+one of (what was then) the "big eight" U.S. accounting firms. While working at
+Arthur Young, he conducted a number of ACC’s external audits during the 1980s
+and penned the famous "Arthur Young letter," which outlined the reasons for
+his belief that the San Francisco regulators abused Lincoln S&L, an
 apparently viable institution.</p>
-<p>Many of the senators and their aides cited this letter as a major 
+
+<p>Many of the senators and their aides cited this letter as a major
 motivation to contact Gray and to inquire about the Bank Board’s exam
-on Keating’s behalf. </p>
-In 1990, Keating hired Atchison away from Arthur Young for an 
+on Keating’s behalf. In hearings on the collapse of Lincoln before the House
+Committee on Banking, Finance, and Urban Affairs just prior to the Keating Five
+ones in the Senate, Mr. Atchison refused to testify on the basis of his Fifth
+Amendment rights.</p>
+
+<p>In 1990, Keating hired Atchison away from Arthur Young for an
 annual salary of approximately $930,000.</p>
+
 <br clear="all">
