--- a/src/views/actors/aides/Kevin-C-Gottlieb.hbs
+++ b/src/views/actors/aides/Kevin-C-Gottlieb.hbs
@@ -5,14 +5,14 @@ name: actors
 <h2>Kevin C. Gottlieb</h2>
 
 
-<p>Senator Riegle's Aide.</p>
-<p>Kevin C. Gottlieb was longtime aide and campaign manager for Riegle. 
-He participated with Riegle in meetings about Lincoln S&L. Gottlieb 
-was later involved in Riegle's defense of his role in the affair, which 
-was undercut by the fact that Riegle stressed for several weeks in 
-January 1990 that he was not at the now-infamous April 2nd meeting 
-with Gray, only to later be forced to acknowledge that the session may 
+<p><u>Senator Riegle's Aide</u></p>
+<p>Kevin C. Gottlieb was longtime aide and campaign manager for Riegle.
+He participated with Riegle in meetings about Lincoln S&L. Gottlieb
+was later involved in Riegle's defense of his role in the affair, which
+was undercut by the fact that Riegle stressed for several weeks in
+January 1990 that he was not at the now-infamous April 2nd meeting
+with Gray, only to later be forced to acknowledge that the session may
 have been arranged at his suggestion. Gottlieb resigned soon after that
-announcement and returned to the private sector. Gottlieb denied that 
+announcement and returned to the private sector. Gottlieb denied that
 his resignation was connected to the Keating Five affair.</p>
 <br clear="all">
