--- a/src/views/actors/supporting_cast/Danny-Wall.hbs
+++ b/src/views/actors/supporting_cast/Danny-Wall.hbs
@@ -2,15 +2,15 @@
 name: actors
 ---
 
-<h2>Danny Wall</h2>
+<h2>Danny Wall</h2><br />
+<u>FHLBB Chairman</u><br /><br />
 
-
-
-<p>FHLBB Chairman that succeeded Edwin Gray in mid-1987, after 
-Gray had stepped down from his post. Some say Wall was more 
-sympathetic to Keating. As the time, the House Banking Committee 
-Chairman asked President Bush to dismiss him. Under his 
+<p>Wall was the FHLBB Chairman that succeeded Edwin Gray in mid-1987, after
+Gray had stepped down from his post. Some say Wall was more
+sympathetic to Keating. Wall dismissed efforts for Congressional action on the
+burgeoning scandal. At the time, the House Banking Committee
+Chairman asked President Bush to dismiss him. Under his
 Chairmanship, the Bank Board did not follow the San Francisco officials’
-recommendation to seize Lincoln. Mr. Wall said that there was 
+recommendation to seize Lincoln. Mr. Wall said that there was
 insufficient proof to justify the action.</p>
 <br clear="all">
