--- a/src/views/actors/supporting_cast/James-Wright.hbs
+++ b/src/views/actors/supporting_cast/James-Wright.hbs
@@ -2,14 +2,15 @@
 name: actors
 ---
 
-<h2>James “Jim” Wright, Jr</h2>
+<h2>James “Jim” Wright, Jr</h2><br />
+<u>Texas Congressman and Speaker of the House</u>
 
 
 <img src="/img/actors/SpeakerWright.jpg" alt="Speaker Wright" class="float-left">
-<p>Wright was a Democratic U.S. Congressman from Texas who 
-served for 34 years in the U.S. House of Representatives and was the 
-Speaker from January 1987 to June 1989. He resigned to avoid being 
+<p>Wright was a Democratic U.S. Congressman from Texas who
+served for 34 years in the U.S. House of Representatives and was the
+Speaker from January 1987 to June 1989. He resigned to avoid being
 found guilty by a House committee following his involvement in several
-scandals. One of the more prominent ones was the savings and loan 
+scandals. One of the more prominent ones was the savings and loan
 crisis.</p>
 <br clear="all">
