--- a/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
+++ b/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
@@ -12,25 +12,24 @@ name: actors
 </ul>
 </div>
 
-<p>FHLBB Board Member</p>
+<p><u>FHLBB Board Member</u></p>
 <p>
 The Reagan Administration appointed Henkel to the FHLBB in late
-1986 after lobbying by Keating. Henkel was named through a recess 
-appointment, meaning that he did not require Senate confirmation. He 
-proposed new regulations in his first meeting on the FHLBB. Many saw 
-these new rules, while technically applicable to all Federally chartered 
-S&Ls, as specifically targeted to benefit Lincoln. Henkel vigorously 
-denies these allegations. He resigned from the FHLBB only five months 
-later, shortly after it was revealed that he had several large loans from 
-Lincoln, saying he needed to protect his family from the intense media 
-scrutiny. Henkel later reached an agreement with the FHLBB’s 
-successor agency that banned him from the banking and thrift 
-industries. However, he neither admitted nor denied the charges, and 
-continues to “categorically den[y] any wrongdoing.”<sup>1</sup>
-Henkel said he agreed to the settlement only to avoid the cost of litigation.</p>
+1986 after lobbying by Keating. Henkel was named through a recess
+appointment, meaning that he did not require Senate confirmation. He
+proposed new regulations in his first meeting on the FHLBB. Many saw
+these new rules, while technically applicable to all Federally-chartered
+S&Ls, as specifically targeted to benefit Lincoln. Henkel vigorously
+denies these allegations. He resigned from the FHLBB only five months
+later, shortly after it was revealed that he had several large loans from
+Lincoln, saying he needed to protect his family from the intense media
+scrutiny. Henkel later reached an agreement with the FHLBB’s
+successor agency that banned him from the banking and thrift
+industries. However, he neither admitted nor denied the charges, and
+continues to “categorically den[y] any wrongdoing.”<sup>1</sup> Henkel said he
+agreed to the settlement only to avoid the cost of litigation.</p>
 
 <hr />
- 
-1 http://web.mit.edu/~mkgray/afs/bar/afs/net/user/tytso/usenet/americas
-t/wpost/1435</p>
+
+<p><p id="section1"><sup>1</sup></p>http://web.mit.edu/~mkgray/afs/bar/afs/net/user/tytso/usenet/americast/wpost/1435</p>
 <br clear="all">
